# vsD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  design.md  doxygen  test.cpp
child/: CMakeLists.txt  child.cpp  child.hpp  child_gflags.hpp  child_include.hpp  child_loadso.cpp  child_loadso.hpp
daemon/: .daemon.hpp.swp  .daemon_include.hpp.swp  .test.cpp.swp  CMakeLists.txt  a.out  daemon.hpp  daemon_include.hpp  test.cpp  typehelper.hpp
dbus/: a.xml  adaptor.hpp  child.xml  loadso-dbus-client-glue.hpp  loadso-dbus-server-glue.hpp  loadso.cpp  loadso.hpp  loadso.xml  proxy.hpp  todaywork.doc  vsD_dbus.hpp  vsd-introspect.xml  vsd.xml
dl/: CMakeLists.txt  dl.hpp  dl_include.hpp  dl_interface.hpp  lib.cpp  lib.hpp  libfoo.cpp  libfoo.hpp  loadso.hpp  somap.hpp  test.cpp  tt.cpp
exception/: general.hpp
fork/: fork_include.hpp  givebirth.hpp  test.cpp
include/: .utility.hpp.swo  config.hpp.in  general.hpp  typehelper.hpp  utility.hpp
main/: CMakeLists.txt  main_include.hpp  vsd.cpp
privilege/: CMakeLists.txt  privilege_include.hpp  resource.cpp  resource.hpp
public/: dl_interface.hpp
signal/: .signal.hpp.swo  .signal_include.hpp.swp  CMakeLists.txt  a.out  disposition.hpp  signal.hpp  signal_daemon.hpp  signal_include.hpp  signal_type.hpp  test.cpp  typehelper.hpp
vsD/: .vsd.cpp.swo  vsD_include.hpp  vsd.cpp
